--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-form": "^0.0.3",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-navigation-menu": "^1.1.3",
         "@radix-ui/react-select": "^1.2.2",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
