--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-navigation-menu": "^1.1.3",
         "@radix-ui/react-select": "^1.2.2",
+        "@radix-ui/react-separator": "^1.0.3",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
         "react": "^18.2.0",
