--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "@hookform/resolvers": "^3.1.1",
         "@radix-ui/colors": "^1.0.0",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.4",
         "@radix-ui/react-form": "^0.0.3",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-navigation-menu": "^1.1.3",
         "@radix-ui/react-select": "^1.2.2",
         "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-toast": "^1.1.4",
+        "@radix-ui/react-visually-hidden": "^1.0.3",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
         "react": "^18.2.0",
