--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-toast": "^1.1.4",
         "@radix-ui/react-visually-hidden": "^1.0.3",
+        "@types/lodash": "^4.14.196",
+        "@types/luxon": "^3.3.1",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
+        "jwt-decode": "^3.1.2",
+        "lodash": "^4.17.21",
+        "luxon": "^3.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.1",
