--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
         "@types/luxon": "^3.3.1",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
+        "echarts": "^5.4.3",
+        "echarts-for-react": "^3.0.2",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "luxon": "^3.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.45.1",
         "react-router-dom": "^6.14.1",
         "tailwindcss": "^3.3.2",
@@ -39,6 +42,7 @@
         "@types/node": "^20.3.3",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
+        "@types/react-flatpickr": "^3.8.8",
         "@types/react-router-dom": "^5.3.3",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
