--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-toast": "^1.1.4",
         "@radix-ui/react-visually-hidden": "^1.0.3",
+        "@react-pdf-viewer/core": "^3.12.0",
         "@types/lodash": "^4.14.196",
         "@types/luxon": "^3.3.1",
+        "@types/validator": "^13.11.1",
         "@types/yup": "^0.32.0",
         "axios": "^1.4.0",
         "echarts": "^5.4.3",
         "echarts-for-react": "^3.0.2",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
-        "luxon": "^3.3.0",
+        "luxon": "^3.4.0",
+        "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.45.1",
         "react-router-dom": "^6.14.1",
         "tailwindcss": "^3.3.2",
+        "validator": "^13.11.0",
         "yup": "^1.2.0"
     },
     "devDependencies": {
