--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.45.1",
         "react-router-dom": "^6.14.1",
+        "react-select": "^5.7.4",
         "tailwindcss": "^3.3.2",
         "validator": "^13.11.0",
         "yup": "^1.2.0"
@@ -48,6 +49,7 @@
         "@types/react-dom": "^18.0.11",
         "@types/react-flatpickr": "^3.8.8",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-select": "^5.0.1",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.59.0",
         "@vitejs/plugin-react-swc": "^3.0.0",
