--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.45.1",
+        "react-loading": "^2.0.3",
         "react-router-dom": "^6.14.1",
         "react-select": "^5.7.4",
         "tailwindcss": "^3.3.2",
