--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.1.1",
+        "@phosphor-icons/react": "^2.1.5",
         "@radix-ui/colors": "^1.0.0",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.4",
@@ -21,6 +22,7 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-toast": "^1.1.4",
         "@radix-ui/react-visually-hidden": "^1.0.3",
+        "@radix-ui/themes": "^3.0.3",
         "@react-pdf-viewer/core": "^3.12.0",
         "@types/lodash": "^4.14.196",
         "@types/luxon": "^3.3.1",
