--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/luxon": "^3.3.1",
         "@types/validator": "^13.11.1",
         "@types/yup": "^0.32.0",
+        "apexcharts": "^3.49.0",
         "axios": "^1.4.0",
         "echarts": "^5.4.3",
         "echarts-for-react": "^3.0.2",
@@ -36,6 +37,7 @@
         "luxon": "^3.4.0",
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
         "react-hook-form": "^7.45.1",
