--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build --force",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
@@ -13,6 +13,7 @@
         "@hookform/resolvers": "^3.1.1",
         "@phosphor-icons/react": "^2.1.5",
         "@radix-ui/colors": "^1.0.0",
+        "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.4",
         "@radix-ui/react-form": "^0.0.3",
@@ -35,7 +36,8 @@
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "luxon": "^3.4.0",
-        "pdfjs-dist": "^3.4.120",
+        "pdfjs-dist": "^3.6.172",
+        "rangy": "^1.3.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
@@ -44,12 +46,14 @@
         "react-loading": "^2.0.3",
         "react-router-dom": "^6.14.1",
         "react-select": "^5.7.4",
+        "react-wordcloud": "^1.2.7",
         "tailwindcss": "^3.3.2",
         "validator": "^13.11.0",
         "yup": "^1.2.0"
     },
     "devDependencies": {
         "@types/node": "^20.3.3",
+        "@types/rangy": "^0.0.38",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@types/react-flatpickr": "^3.8.8",
