--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "vercel-build": "npm install --legacy-peer-deps && npm run build",
+        "build": "vite build --force",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
