--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "@types/luxon": "^3.3.1",
         "@types/validator": "^13.11.1",
         "@types/yup": "^0.32.0",
+        "@visx/scale": "^3.12.0",
+        "@visx/text": "^3.12.0",
+        "@visx/wordcloud": "^3.12.0",
         "apexcharts": "^3.49.0",
         "axios": "^1.4.0",
         "echarts": "^5.4.3",
@@ -50,7 +53,6 @@
         "react-loading": "^2.0.3",
         "react-router-dom": "^6.14.1",
         "react-select": "^5.7.4",
-        "react-wordcloud": "^1.2.7",
         "tailwindcss": "^3.3.2",
         "validator": "^13.11.0",
         "yup": "^1.2.0"
